fix(messages): back button now appears on mobile view, fixes issue #102

--- a/less/messenger.less
+++ b/less/messenger.less
@@ -128,11 +128,19 @@
 
 //back button to get back to match list
 #back {
-  position: absolute;
+  position: fixed;
   @media (min-width: 981px) {
     display: none;
   }
 }
+
+// #back {
+//   display: none;
+//   @media (max-width: 980px) {
+//     display: block;
+//     position: absolute;
+//   }
+// }
 
 //make one or the other columns disappear on mobile ciew
 .mobile {
